[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
"dislash.py" = "^1.4.9"
psutil = "^5.9.4"
asyncpraw = "^7.7.0"
discord = "^2.1.0"
topggpy = "^1.4.0"
python-dateutil = "^2.8.2"
bs4 = "^0.0.1"
motor = "^3.1.1"
asyncprawcore = "^2.3.0"
chat-exporter = "^2.5.3"
asyncdagpi = "^4.1.5"
poetry = "^1.4.0"
openai = "^0.26.5"
epoch = "^0.1.5"
lavalink = "^4.0.6"
akinator = "^1.0.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"
pre-commit = "^3.1.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"